--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,9 +1,9 @@
-<div class="container">
+<div class="container shadow p-3 mb-5 bg-white rounded mt-5">
   <h1 class="text-center">Reviews#new</h1>
   <%# tenho de colocar na ordem que aparece na url %>
   <%= simple_form_for [@restaurant, @review] do |f| %>
     <%= f.input :content %>
     <%= f.input :rating %>
-    <%= f.submit "Salvar review", class: "btn btn-primary" %>
+    <%= f.submit "Salvar review", class: "btn btn-success" %>
   <% end %>
 </div>
