--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -6,6 +6,7 @@
       <h5 class="card-title">Detalhes do Restaurante</h5>
       <p class="card-text"><strong>Endereço:</strong> <%= @restaurant.address %></p>
       <p class="card-text"><strong>Categoria:</strong> <%= @restaurant.category %></p>
+       <p class="card-text"><strong>Telefone:</strong> <%= @restaurant.phone_number %></p>
     </div>
   </div>
 
