--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,14 +1,1 @@
-
-<div class="container shadow p-3 mb-5 bg-white rounded mt-5 w-50">
-  <h1 class="text-center">Novo Restaurante</h1>
-  <%= simple_form_for @restaurant do |f| %>
-    <strong> <%= f.input :name %></strong>
-    <strong> <%= f.input :address %></strong>
-    <strong> <%= f.input :phone_number %></strong>
-    <strong> <%= f.input :category, collection: %w[chinese italian japanese french belgian] %> </strong>
-    <%= f.button :submit, class: "btn btn-primary", style: "display: none;" %>
-  <% end %>
-  <button type="submit" form="new_restaurant" class="btn btn-success">
-    <i class="fa-solid fa-plus"></i> Criar novo restaurante
-  </button>
-</div>
+<%= render "restaurants/form" %>
